# window-os

./: .env  .gitignore  Cargo.toml  Makefile.toml  docker-compose.yaml  minify.js  package-lock.json  package.json  safelist.txt  tailwind.config.js  tailwind.css
assets/css/lib/: tailwind.css
assets/js/: main.js
migrations/: 0001_create-users_up.sql  0002_insert-users_up.sql
src/: config.rs  lib.rs  main.rs  postgres.rs  router.rs
src/controllers/: main.rs
src/middlewares/: csrf.rs
src/models/: error.rs  mod.rs  state.rs  user.rs
src/utilities/: db.rs  hash.rs
src/views/: main.rs
