[package]
name = "window-os"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.7", features = ["macros"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.9.4", features = ["cookie", "multipart"] }
axum_csrf = { version = "0.10.0", features = ["layer"] }
axum_session = { version = "0.14.0" }
axum_session_redispool = { version = "0.3.0" }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env"] }
cookie = "0.18.1"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
http-body-util = "0.1.2"
redis = "0.27.5"
redis_pool = "0.6.0"
rust-embed = "8.5.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tokio-postgres-migration = "0.1.0"
tower-http = { version = "0.6.1", features = [
  "fs",
  "set-header",
  "compression-br",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vy = "0.1.1"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
